--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,10 @@ gunicorn==20.1.0
 pymongo~=4.0.1
 requests==2.26.0
 mongodb_migrations==1.1.1
+starlette==0.16.0
+Authlib==0.15.5
+itsdangerous==2.0.1
+ipython==8.0.1
+google-api-python-client==2.36.0
+google-auth
+Flask==2.0.2
